--- a/css/style.css
+++ b/css/style.css
@@ -11,12 +11,13 @@ body {
     margin: auto;
 }
 
+/* 1. Header */
+
 .header {
     display: flex;
     align-items: center;
     padding: 10px 0;
 }
-
 .search-form {
     display: flex;
     margin-left: 76px;
@@ -26,7 +27,6 @@ body {
     flex-grow: 1;
     position: relative;
 }
-
 .search-input {
     background-color: transparent;
     border: none;
@@ -36,7 +36,6 @@ body {
     padding-top: 13px;
     padding-bottom: 13px; 
 }
-
 .search-button {
     background-color: transparent;
     border: none;
@@ -48,11 +47,9 @@ body {
     padding-left: 18px;
     cursor: pointer;
 }
-
 .auth {
     margin-left: auto;
 }
-
 .login {
     background: #EBEBEB;
     border-radius: 50px;
@@ -63,7 +60,6 @@ body {
     line-height: 16px;
     color: #000000;
 }
-
 .shopping-cart {
     position: relative;
     text-decoration: none;
@@ -76,7 +72,6 @@ body {
     justify-content: center;
     margin-left: 30px;
 }
-
 .shopping-counter {
     position: absolute;
     right: 0;
@@ -89,6 +84,8 @@ body {
     padding: 5px;
     border-radius: 50%;
 }
+
+/* 2. Main */
 
 .slide {
     position: relative;
@@ -138,7 +135,7 @@ body {
     line-height: 23px
 }
 .slide-summer {
-    background-image: url("../img/summer.png");
+    background-image: url("../img/summer.jpg");
     background-repeat: no-repeat;
     background-size: cover;
 }
@@ -165,9 +162,10 @@ body {
     border-radius: 20px;
     overflow: hidden;
     padding: 32px;
-    min-width: 570px;
+    max-width: 570px;
     min-height: 380px;
     display: flex;
+    flex-grow: 1;
     flex-direction: column;
     justify-content: space-between;
 }
