--- a/css/style.css
+++ b/css/style.css
@@ -1,220 +1,464 @@
 * {
-    box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 body {
-    font-family: 'Roboto', sans-serif;
+  font-family: "Roboto", sans-serif;
 }
 
 .container {
-    max-width: 1194px;
-    margin: auto;
+  max-width: 1194px;
+  margin: auto;
 }
 
 /* 1. Header */
 
 .header {
-    display: flex;
-    align-items: center;
-    padding: 10px 0;
+  display: flex;
+  align-items: center;
+  padding: 10px 0;
 }
 .search-form {
-    display: flex;
-    margin-left: 76px;
-    background: rgba(238, 238, 238, 0.71);
-    border-radius: 10px;
-    max-width: 620px;
-    flex-grow: 1;
-    position: relative;
+  display: flex;
+  margin-left: 76px;
+  background: rgba(238, 238, 238, 0.71);
+  border-radius: 10px;
+  max-width: 620px;
+  flex-grow: 1;
+  position: relative;
 }
 .search-input {
-    background-color: transparent;
-    border: none;
-    width: 100%;
-    padding-left: 20px;
-    padding-right: 50px;
-    padding-top: 13px;
-    padding-bottom: 13px; 
+  background-color: transparent;
+  border: none;
+  width: 100%;
+  padding-left: 20px;
+  padding-right: 50px;
+  padding-top: 13px;
+  padding-bottom: 13px;
 }
 .search-button {
-    background-color: transparent;
-    border: none;
-    position: absolute;
-    right: 0;
-    top: 0;
-    height: 100%;
-    padding-right: 18px;
-    padding-left: 18px;
-    cursor: pointer;
+  background-color: transparent;
+  border: none;
+  position: absolute;
+  right: 0;
+  top: 0;
+  height: 100%;
+  padding-right: 18px;
+  padding-left: 18px;
+  cursor: pointer;
 }
 .auth {
-    margin-left: auto;
+  margin-left: auto;
 }
 .login {
-    background: #EBEBEB;
-    border-radius: 50px;
-    padding: 16px 30px;
-    display: block;
-    text-decoration: none;
-    font-size: 14px;
-    line-height: 16px;
-    color: #000000;
+  background: #ebebeb;
+  border-radius: 50px;
+  padding: 16px 30px;
+  display: block;
+  text-decoration: none;
+  font-size: 14px;
+  line-height: 16px;
+  color: #000000;
 }
 .shopping-cart {
-    position: relative;
-    text-decoration: none;
-    width: 49px;
-    height: 49px;
-    border-radius: 50%;
-    background: #F66A15;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    margin-left: 30px;
+  position: relative;
+  text-decoration: none;
+  width: 49px;
+  height: 49px;
+  border-radius: 50%;
+  background: #f66a15;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-left: 30px;
 }
 .shopping-counter {
-    position: absolute;
-    right: 0;
-    bottom: 0;
-    background: #FFAF19;
-    font-size: 8px;
-    line-height: 9px;
-    color: #000000;
-    display: block;
-    padding: 5px;
-    border-radius: 50%;
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  background: #ffaf19;
+  font-size: 8px;
+  line-height: 9px;
+  color: #000000;
+  display: block;
+  padding: 5px;
+  border-radius: 50%;
 }
 
 /* 2. Main */
 
 .slide {
-    position: relative;
-    border-radius: 20px;
-    overflow: hidden;
-    min-height: 400px;
-    display: flex;
-    align-items: center;
-    padding: 100px;
+  position: relative;
+  border-radius: 20px;
+  overflow: hidden;
+  min-height: 400px;
+  display: flex;
+  align-items: center;
+  padding: 100px;
 }
 .slide-text-light {
-    background-color: grey;
-    color: white;
+  background-color: grey;
+  color: white;
 }
 .slide-content {
-    position: relative;
-    max-width: 400px;
+  position: relative;
+  max-width: 400px;
 }
 .slide-title {
-    margin-top: 0;
-    margin-bottom: 15px;
-    font-weight: bold;
-    font-size: 50px;
-    line-height: 51px;
+  margin-top: 0;
+  margin-bottom: 15px;
+  font-weight: bold;
+  font-size: 50px;
+  line-height: 51px;
 }
 .slide-text {
-    font-weight: bold;
-    font-size: 16px;
-    line-height: 23px;
-    margin-bottom: 30px;
+  font-weight: bold;
+  font-size: 16px;
+  line-height: 23px;
+  margin-bottom: 30px;
 }
 .button-primary {
-    background: #F47322;
-    color: #fff;
+  background: #f47322;
+  color: #fff;
 }
 .button-default {
-    background-color: #fff;
-    color: #5F5F61;
+  background-color: #fff;
+  color: #5f5f61;
 }
 .button {
-    border-radius: 25px;
-    padding: 12px 50px;
-    display: inline-block;
-    text-decoration: none;
-    font-weight: 500;
-    font-size: 14px;
-    line-height: 23px
+  border-radius: 25px;
+  padding: 12px 50px;
+  display: inline-block;
+  text-decoration: none;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 23px;
 }
 .slide-summer {
-    background-image: url("../img/summer.jpg");
-    background-repeat: no-repeat;
-    background-size: cover;
+  background-image: url("../img/summer.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 .slide:before {
-    content: '';
-    position: absolute;
-    left: 0;
-    right: 0;
-    top: 0;
-    bottom: 0;
-    width: 100%;
-    height: 100%;
-    background: linear-gradient(90deg, rgba(0, 0, 0, 0.43) 40.45%, rgba(0, 0, 0, 0) 100%);
+  content: "";
+  position: absolute;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(
+    90deg,
+    rgba(0, 0, 0, 0.43) 40.45%,
+    rgba(0, 0, 0, 0) 100%
+  );
 }
 
 .promo {
-    display: flex;
-    padding-top: 50px;
-    padding-bottom: 50px;
-    justify-content: space-between;
+  display: flex;
+  padding-top: 50px;
+  padding-bottom: 50px;
+  justify-content: space-between;
+  margin: -20px;
 }
 .card {
-    position: relative;
-    border-radius: 20px;
-    overflow: hidden;
-    padding: 32px;
-    max-width: 570px;
-    min-height: 380px;
-    display: flex;
-    flex-grow: 1;
-    flex-direction: column;
-    justify-content: space-between;
+  margin: 20px;
+  flex: 50%;
+  position: relative;
+  border-radius: 20px;
+  overflow: hidden;
+  padding: 32px;
+  max-width: 570px;
+  min-height: 380px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 .card:before {
-    z-index: -1;
-    content: '';
-    position: absolute;
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100%;
-    background: linear-gradient(0deg, rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3));
+  z-index: -1;
+  content: "";
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(0deg, rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3));
 }
 .card-text-light {
-    color: #fff;
+  color: #fff;
 }
 .card-title {
-    font-weight: 500;
-    font-size: 24px;
-    line-height: 23px;
-    margin-top: 4px;
-    margin-bottom: 21px;
+  font-weight: 500;
+  font-size: 24px;
+  line-height: 23px;
+  margin-top: 4px;
+  margin-bottom: 21px;
 }
 .card-description {
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 23px;
-    max-width: 200px;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 23px;
+  max-width: 200px;
 }
 .card-price {
-    display: block;
-    font-weight: 500;
-    font-size: 24px;
-    line-height: 23px;
-    margin-bottom: 8px;
+  display: block;
+  font-weight: 500;
+  font-size: 24px;
+  line-height: 23px;
+  margin-bottom: 8px;
 }
 .card-delivery {
-    display: block;
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 23px;
-    margin-bottom: 25px;
+  display: block;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 23px;
+  margin-bottom: 25px;
 }
 .card-image {
-    position: absolute;
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100%;
-    z-index: -2;
-    object-fit: cover;
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -2;
+  object-fit: cover;
+}
+
+.section-title {
+  font-weight: 500;
+  font-size: 32px;
+  line-height: 23px;
+  margin-top: 0;
+  margin-bottom: 47px;
+}
+.delivery-week {
+  padding: 100px 0;
+}
+.delivery-cards {
+  display: flex;
+  flex-wrap: wrap;
+  margin: -15px;
+}
+.delivery-card {
+  position: relative;
+  width: 275px;
+  height: 182px;
+  border-radius: 18px;
+  overflow: hidden;
+  margin: 15px;
+}
+.delivery-image {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+.delivery-tag {
+  position: absolute;
+  left: 10px;
+  top: 16px;
+  border-radius: 30px;
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 23px;
+  color: #49494f;
+  padding: 5px 10px;
+}
+.tag-health {
+  background: #d0fd89;
+}
+.tag-vegies {
+  background: #aebc41;
+  color: #ffffff;
+}
+.tag-meat {
+  background: #b86b78;
+  color: #fff;
+}
+.tag-chicken {
+  background: #d68334;
+  color: #fff;
+}
+.tag-fish {
+  background: #cd6255;
+  color: #fff;
+}
+.tag-kids {
+  background: #fffdbf;
+}
+.tag-parents {
+  background: #f6fdc8;
+}
+.tag-festive {
+  background: #fef7fe;
+}
+
+.section-grey {
+  background: #f6f6f6;
+  margin-bottom: 100px;
+}
+.category {
+  padding-top: 40px;
+  padding-bottom: 60px;
+}
+.tabs-content {
+  display: flex;
+  margin: 0 -18.5px;
+}
+.tabs {
+  display: flex;
+  margin: 0;
+  margin-bottom: 62px;
+  padding: 0;
+  list-style: none;
+}
+.tabs-link {
+  font-size: 20px;
+  line-height: 23px;
+  text-decoration: none;
+  color: #49494f;
+  margin-right: 59px;
+}
+.tabs-link.active {
+  color: #f37321;
+}
+.tabs-card {
+  margin: 0 18.5px;
+  max-width: 270px;
+  border-radius: 20px;
+  overflow: hidden;
+  background: #ffffff;
+}
+.tabs-image {
+  max-width: 100%;
+}
+.tabs-card-content {
+  padding: 23px;
+}
+.tabs-title {
+  margin-top: 0;
+  margin-bottom: 13px;
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 23px;
+  color: #000000;
+}
+.tabs-description {
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 23px;
+  color: #b9b9be;
+}
+.tabs-info {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.tabs-price {
+  font-weight: 500;
+  font-size: 23px;
+  line-height: 23px;
+  color: #4b4b51;
+  display: block;
+  margin-bottom: 5px;
+}
+.tabs-weight {
+  font-weight: 500;
+  font-size: 17px;
+  line-height: 20px;
+  color: #aaaab1;
+}
+.button-outline {
+  cursor: pointer;
+  background-color: transparent;
+  padding: 15px 25px;
+  border: 2px solid #f37321;
+  box-sizing: border-box;
+  border-radius: 33px;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 19px;
+  color: #f37321;
+}
+.button-center {
+  display: block;
+  margin: auto;
+  margin-top: 60px;
+  width: 315px;
+}
+
+.benefits {
+  margin-bottom: 202px;
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+}
+.benefits-image {
+  top: 30px;
+  left: 105px;
+  position: relative;
+}
+.benefits-content {
+  display: flex;
+  margin: 0 -18.5px;
+}
+.benefits-card {
+  margin: 0 18.5px;
+  max-width: 270px;
+  border-radius: 20px;
+  overflow: hidden;
+  background: #ffffff;
+  border: 1px solid #e9e9e9;
+  box-sizing: border-box;
+  box-shadow: 1px 4px 40px rgba(0, 0, 0, 0.1);
+  border-radius: 18px;
+}
+.benefits-title {
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 23px;
+  text-align: center;
+  color: #000000;
+  margin-top: 32px;
+  margin-bottom: 13px;
+  padding: 0 15px;
+}
+.benefits-description {
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 22px;
+  text-align: center;
+  color: #49494f;
+  margin: 0;
+}
+.benefits-card-content {
+  padding: 25px;
+}
+
+/* Footer */
+.footer {
+  padding: 40px 0;
+  background: #f6f6f6;
+}
+.footer-wrapper {
+  display: flex;
+  align-items: center;
+}
+.footer-logo {
+  margin-right: 50px;
+}
+.footer-link {
+  font-weight: normal;
+  font-size: 16px;
+  line-height: 23px;
+  text-decoration-line: underline;
+  color: #000000;
+  margin-right: 50px;
+}
+.social-links {
+  display: flex;
+  align-items: center;
+  margin-left: auto;
+}
+.social-link {
+  margin-left: 20px;
+  text-decoration: none;
 }
