--- a/css/style.css
+++ b/css/style.css
@@ -87,6 +87,7 @@ body {
 
 /* 2. Main */
 
+/************ 2.1 Slider ***********/
 .slide {
   position: relative;
   border-radius: 20px;
@@ -154,6 +155,8 @@ body {
     rgba(0, 0, 0, 0) 100%
   );
 }
+
+/************ 2.2 Promo ***********/
 
 .promo {
   display: flex;
@@ -225,6 +228,8 @@ body {
   object-fit: cover;
 }
 
+/************ 2.3 Weekly Delivery ***********/
+
 .section-title {
   font-weight: 500;
   font-size: 32px;
@@ -292,6 +297,8 @@ body {
 .tag-festive {
   background: #fef7fe;
 }
+
+/************ 2.4 Dish Types ***********/
 
 .section-grey {
   background: #f6f6f6;
@@ -387,6 +394,8 @@ body {
   width: 315px;
 }
 
+/************ 2.5 Benefits ***********/
+
 .benefits {
   margin-bottom: 202px;
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
@@ -433,7 +442,8 @@ body {
   padding: 25px;
 }
 
-/* Footer */
+/* 3. Footer */
+
 .footer {
   padding: 40px 0;
   background: #f6f6f6;
