--- a/css/style.css
+++ b/css/style.css
@@ -103,7 +103,23 @@ body {
 }
 .slide-content {
   position: relative;
-  max-width: 400px;
+  max-width: 500px;
+}
+.slider-buttons {
+  position: absolute;
+  right: 46px;
+  bottom: 40px;
+  z-index: 9;
+  display: flex;
+  align-items: center;
+  width: 100px;
+  justify-content: space-between;
+}
+.slider-button {
+  cursor: pointer;
+}
+.swiper {
+  position: relative;
 }
 .slide-title {
   margin-top: 0;
@@ -137,6 +153,16 @@ body {
 }
 .slide-summer {
   background-image: url("../img/summer.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+.slide-fall {
+  background-image: url("../img/fall.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+.slide-vitamins {
+  background-image: url("../img/viamins.jpg");
   background-repeat: no-repeat;
   background-size: cover;
 }
@@ -309,8 +335,9 @@ body {
   padding-bottom: 60px;
 }
 .tabs-content {
+  justify-content: space-evenly;
   display: flex;
-  margin: 0 -18.5px;
+  margin: 0;
 }
 .tabs {
   display: flex;
@@ -330,7 +357,7 @@ body {
   color: #f37321;
 }
 .tabs-card {
-  margin: 0 18.5px;
+  margin: 15px 0;
   max-width: 270px;
   border-radius: 20px;
   overflow: hidden;
@@ -397,7 +424,8 @@ body {
 /************ 2.5 Benefits ***********/
 
 .benefits {
-  margin-bottom: 202px;
+  display: flex;
+  margin: auto;
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
 }
 .benefits-image {
@@ -445,6 +473,7 @@ body {
 /* 3. Footer */
 
 .footer {
+  margin-top: 202px;
   padding: 40px 0;
   background: #f6f6f6;
 }
@@ -471,4 +500,74 @@ body {
 .social-link {
   margin-left: 20px;
   text-decoration: none;
+}
+
+@media (max-width: 1260px) {
+  .container {
+    max-width: 960px;
+  }
+  .search-form {
+    margin-left: 40px;
+    margin-right: 40px;
+  }
+  .tabs-content {
+    flex-wrap: wrap;
+  }
+  .tabs-card {
+    flex: 50%;
+    max-width: calc(50% - 30px);
+  }
+  .benefits-content {
+    display: flex;
+    flex-wrap: wrap;
+  }
+  .benefits-card {
+    flex: 50%;
+    max-width: 50%;
+    margin-top: 25px;
+  }
+}
+@media (max-width: 992px) {
+  .container {
+    max-width: 750px;
+  }
+  .slide {
+    padding: 70px;
+  }
+  .delivery-card {
+    width: calc(50% - 30px);
+  }
+  .footer-logo {
+    margin-right: 40px;
+  }
+}
+@media (max-width: 768px) {
+  .container {
+    max-width: 560px;
+  }
+  .header {
+    flex-wrap: wrap;
+  }
+  .search-form {
+    order: 5;
+    margin-left: 0;
+    margin-right: 0;
+    margin-top: 15px;
+    margin-bottom: 15px;
+  }
+  .promo {
+    flex-wrap: wrap;
+  }
+}
+@media (max-width: 576px) {
+  .container {
+    max-width: 90%;
+  }
+  .tabs-content {
+    flex-wrap: wrap;
+  }
+  .tabs-card {
+    flex: 100%;
+    max-width: 100%;
+  }
 }
